--- a/templates/iam/service-account.jinja
+++ b/templates/iam/service-account.jinja
@@ -1,16 +1,16 @@
 {% set project = env["project"] %}
 {% set deployment = env["deployment"] %}
-{% set BOOMI_SA = deployment + '-boomi-molecule' %}
+{% set boomiSA = deployment + '-boomi-sa' %}
 
 resources:
-- name: {{ BOOMI_SA }}
+- name: {{ boomiSA }}
   type: iam.v1.serviceAccount
   properties:
-    accountId: {{ BOOMI_SA }}
+    accountId: {{ boomiSA }}
     projectId: {{ project }}
     displayName: Service Account used by boomi-molecule for admin actions.
 
 
 outputs:
 - name: BoomiSA
-  value: $(ref.{{ BOOMI_SA }}.email)
+  value: $(ref.{{ boomiSA }}.email)
