added static IP

--- a/config.jinja
+++ b/config.jinja
@@ -41,6 +41,11 @@ resources:
         privateIpGoogleAccess: true
         enableFlowLogs: false
 
+- name: boomi-staticIp
+  type: globaladdress.py
+  properties:
+    name: boomi-staticIp
+
 - name: boomi-firewall
   type: firewall.py
   properties:
@@ -150,7 +155,7 @@ resources:
     network: $(ref.boomi-network.vpcName)
     CLUSTER_NAME: $(ref.boomi-gke-cluster.name)
     ipaddress: $(ref.cloud-filestore.fileShareIp)
-    ingressStaticIpName: $(ref.boomi-network.ingressStaticIpName)
+    ingressStaticIpName: $(ref.boomi-staticIp.ingressStaticIpName)
 
 - name: bastion-instance
   type: bastion_instance.py
