--- a/config.jinja
+++ b/config.jinja
@@ -4,6 +4,9 @@
 {% set CommonTags = properties["CommonTags"] %}
 
 resources:
+- name: boomi-service-account
+  type: service-account.py
+
 - name: enableApis
   type: apis.py
   properties:
@@ -160,6 +163,12 @@ resources:
     machineImage: centos-cloud/global/images/family/centos-7
     minSize: 1
     maxSize: 2
+    saEmail: $(ref.boomi-service-account.boomiServiceAccountEmail)
+    saScopes:
+      - https://www.googleapis.com/auth/compute
+      - https://www.googleapis.com/auth/devstorage.read_only
+      - https://www.googleapis.com/auth/logging.write
+      - https://www.googleapis.com/auth/monitoring
     tags:
       items:
         - bastion
