--- a/config.jinja
+++ b/config.jinja
@@ -12,33 +12,23 @@ resources:
     projectId: {{ project }}
     displayName: Bastion Service Account
 
-- name: boomi-cloudbuild-sa
-  type: iam.v1.serviceAccount
-  properties:
-    accountId: cloudbuild
-    projectId: {{ project }}
-    displayName: CloudBuild Service Account
-
 - name: devopstar-bastion-iam-member
   type: iam_member.py
   properties:
     roles:
       - role: roles/container.admin
         members:
-          - serviceAccount:$(ref.boomi-bastion-sa.email)
-          - serviceAccount:$(ref.boomi-cloudbuild-sa.email)
+          - "serviceAccount:$(ref.boomi-bastion-sa.email)"
           - {{ 'serviceAccount:' + env['project_number'] + '@cloudbuild.gserviceaccount.com' }}
           - {{ 'serviceAccount:' + env['project_number'] + '@cloudservices.gserviceaccount.com' }}
       - role: roles/compute.instanceAdmin
         members:
-          - serviceAccount:$(ref.boomi-bastion-sa.email)
-          - serviceAccount:$(ref.boomi-cloudbuild-sa.email)
+          - "serviceAccount:$(ref.boomi-bastion-sa.email)"
           - {{ 'serviceAccount:' + env['project_number'] + '@cloudbuild.gserviceaccount.com' }}
           - {{ 'serviceAccount:' + env['project_number'] + '@cloudservices.gserviceaccount.com' }}
       - role: roles/storage.admin
         members:
-          - serviceAccount:$(ref.boomi-bastion-sa.email)
-          - serviceAccount:$(ref.boomi-cloudbuild-sa.email)
+          - "serviceAccount:$(ref.boomi-bastion-sa.email)"
           - {{ 'serviceAccount:' + env['project_number'] + '@cloudbuild.gserviceaccount.com' }}
           - {{ 'serviceAccount:' + env['project_number'] + '@cloudservices.gserviceaccount.com' }}
 
