removed dummy service account

--- a/config.jinja
+++ b/config.jinja
@@ -158,6 +158,7 @@ resources:
             enabled: True
             minNodeCount: 1
             maxNodeCount: 20
+            autoprovisioned: True
           management:
             autoUpgrade: True
             autoRepair: True
