update gke configuration

--- a/config.jinja
+++ b/config.jinja
@@ -187,7 +187,7 @@ resources:
         servicesIpv4CidrBlock: 192.168.192.0/24
       masterAuth:
         clientCertificateConfig:
-          issueClientCertificate: True
+          issueClientCertificate: False
       maintenancePolicy:
         window:
           recurringWindow:
