--- a/config.jinja
+++ b/config.jinja
@@ -169,11 +169,7 @@ resources:
             diskSizeGb: 50
             serviceAccount: $(ref.boomi-gke-sa.email)
             oauthScopes:
-              - https://www.googleapis.com/auth/compute
               - https://www.googleapis.com/auth/cloud-platform
-              - https://www.googleapis.com/auth/devstorage.read_only
-              - https://www.googleapis.com/auth/logging.write
-              - https://www.googleapis.com/auth/monitoring
           autoscaling:
             enabled: True
             minNodeCount: 1
@@ -195,7 +191,7 @@ resources:
         clientCertificateConfig:
           issueClientCertificate: false
       workloadIdentityConfig:
-        workloadPool: {{ env['project'] }}.svc.id.goog
+        workloadPool: {{ project }}.svc.id.goog
       maintenancePolicy:
         window:
           recurringWindow:
