--- a/config.jinja
+++ b/config.jinja
@@ -114,7 +114,7 @@ resources:
     network: $(ref.boomi-network.selfLink)
     region: {{ region }}
     asn: 65001
-    nats:
+    natGateway:
     - name: boomi-nat
       natIpAllocateOption: "AUTO_ONLY"
       sourceSubnetworkIpRangesToNat: "LIST_OF_SUBNETWORKS"
