--- a/config.jinja
+++ b/config.jinja
@@ -180,7 +180,7 @@ resources:
       loggingService: logging.googleapis.com/kubernetes
       monitoringService: monitoring.googleapis.com/kubernetes
       privateClusterConfig:
-        enablePrivateNodes: False
+        enablePrivateNodes: false
         enablePrivateEndpoint: False
         masterIpv4CidrBlock: 172.16.0.0/28
       ipAllocationPolicy:
@@ -193,7 +193,6 @@ resources:
       workloadIdentityConfig:
         workloadPool: {{ project }}.svc.id.goog
       networkPolicy:
-        provider: CALICO
         enabled: true
       maintenancePolicy:
         window:
