Updated licence header

--- a/config.jinja
+++ b/config.jinja
@@ -1,3 +1,5 @@
+# Copyright 2020 Dell Boomi. All rights reserved.
+
 {% set project = env["project"] %}
 {% set deployment = env["deployment"] %}
 {% set region = properties["region"] %}
