--- a/templates/cloudbuild/cloudbuild.jinja
+++ b/templates/cloudbuild/cloudbuild.jinja
@@ -1,3 +1,5 @@
+# Copyright 2020 Dell Boomi. All rights reserved.
+
 {% set project = env["project"] %}
 {% set deployment = env["deployment"] %}
 {% set region = properties["region"] %}
