--- a/templates/cloudbuild/cloudbuild.jinja
+++ b/templates/cloudbuild/cloudbuild.jinja
@@ -78,7 +78,7 @@ resources:
         - --namespace
         - default
         - --set
-        - secrets.username={{ properties["username"] }},secrets.password={{ properties["password"] }},secrets.account={{ properties["account"] }},volume.server={{ properties["ipaddress"] }},storage.reservedIpRange={{ properties["reservedIpRange"] }},storage.network={{ properties["network"] }},ingress.staticIpName={{ properties["ingressStaticIpName"] }}
+        - secrets.username={{ properties["BoomiUserEmailID"] }},secrets.password={{ properties["BoomiPassword"] }},secrets.account={{ properties["BoomiAccountID"] }},volume.server={{ properties["ipaddress"] }},storage.reservedIpRange={{ properties["reservedIpRange"] }},storage.network={{ properties["network"] }},ingress.staticIpName={{ properties["ingressStaticIpName"] }}
         - '.'
       dir: gcp-deployment-manager/kubernetes/helm
       env:
