--- a/boomi_molecule.jinja
+++ b/boomi_molecule.jinja
@@ -1,8 +1,10 @@
 # Copyright 2020 Dell Boomi. All rights reserved.
 
+{% import "path_utils.jinja" as path_utils with context %}
+
 {% set project = env["project"] %}
 {% set deployment = env["deployment"] %}
-{% set region = properties["region"] %}
+{% set region = path_utils.zoneToRegion(properties["zone"]) %}
 {% set zone = properties["zone"] %}
 {% set machineType = properties["machineType"] %}
 {% set bootDiskType = properties["bootDiskType"] %}
